revision 9:
- fixed calllist for labor-firmwares (foncalls.patch)
- update to busybox-1.4.1
- cpmac-ioctl.patch
- kernel-printk.patch
revision 8:
- update to busybox-1.4.0
- added some kernel-modules (ntfs, cifs, smbfs)
revision 5:
- fixed W701V-webmenu patch
revision 4:
- more W701V fixes
- added some iptable-modules
revision 3:
- updated openvpn-Package to 0.6b
- updated .version
- fixed W701V patch
- added avm-ftpd-remove patch
revision 2:
- fixed modules_install with parallel make
- added unionfs 
- added libreadline
revision 1:
- initial checkin