@@ -1,0 +1,23 @@
+config DS_PACKAGE_ORANGEBOX
+	bool "orangebox 1.01"
+	depends on  DS_TYPE_FON_WLAN_7141 || \
+		    DS_TYPE_FON_WLAN_7170 || \
+		    DS_TYPE_SPEEDPORT_W701V || \
+		    DS_TYPE_CUSTOM
+	default n
+	help
+	    Shadwo000's Webinterfacemod
+
+config DS_PACKAGE_ORANGEBOX_TSB
+	bool "tsb"
+	depends on DS_PACKAGE_ORANGEBOX
+	default n
+	help
+	    TSB-LCR Button
+
+config DS_PACKAGE_ORANGEBOX_CALLPATCH
+	bool "callpatch"
+	depends on DS_PACKAGE_ORANGEBOX
+	default n
+	help
+	    CallPatch
